# langgraph-openai-serve

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  index.html  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.agents/: CODE_STYLE.md
.github/workflows/: demo-image-api.yml  demo-image-chainlit.yml  demo-test.yml  doc_deploy.yml  doc_test.yml  docker_push.yml  lint.yml  package.yml  test.yml
demo/: .env.example  .gitignore  Makefile  README.md  app.py  chainlit.py  chainlit_hitl.py  compose.dev.yaml  compose.yaml  hitl_graph.py
demo/api/: .dockerignore  .env.example  Dockerfile  README.md  app.py  pyproject.toml  settings.py  setup_checkpointer.py  utils.py
demo/api/graphs/: advanced_mcp.py  citations.py  complex_subgraphs.py  custom_events.py  custom_io.py  interruptible.py  lgos_rag.py  simple.py
demo/api/graphs/subgraphs/: api_contract.py  docs.py  keyword.py  schemas.py  specialist_team.py
demo/api/loggers/: filters.py  setup.py
demo/api/loggers/configs/: default.py
demo/api/src/lgos_demo_api/: app.py  checkpointer.py  settings.py  setup_checkpointer.py
demo/api/src/lgos_demo_api/corpus/: demo-models.md  openai-clients.md  overview.md
demo/api/src/lgos_demo_api/graphs/: citations.py  complex_subgraphs.py  custom_events.py  custom_io.py  interruptible.py  lgos_rag.py  simple.py  status_events.py
demo/api/src/lgos_demo_api/graphs/subgraphs/: api_contract.py  docs.py  keyword.py  specialist_team.py
demo/api/src/lgos_demo_api/loggers/: filters.py  setup.py
demo/api/src/lgos_demo_api/loggers/configs/: default.py  uvicorn.py
demo/api/tests/: conftest.py  test_app.py  test_checkpointer.py  test_settings.py
demo/api/tests/graphs/: test_advanced_mcp.py  test_citations.py  test_complex_subgraphs.py  test_custom_events.py  test_custom_io.py  test_interruptible.py  test_lgos_rag.py  test_simple.py  test_status_events.py
demo/api/tests/integration/: test_bifrost_proxy.py
demo/tests/: conftest.py
demo/ui/chainlit_ui/: .dockerignore  .env.example  Dockerfile  README.md  auth.py  client_config.py  client_settings.py  database.py  history.py  hitl.py  main.py  pyproject.toml  setup_database.py  simple.py
demo/ui/chainlit_ui/.chainlit/: config.toml
demo/ui/chainlit_ui/migrations/: 0004_chainlit_2_3_0_default_open.sql
demo/ui/chainlit_ui/src/lgos_chainlit/: auth.py  chainlit.md  client_settings.py  database.py  history.py  hitl.py  lgos_protocol.py  main.py  settings.py  setup_database.py  simple.py
demo/ui/chainlit_ui/src/lgos_chainlit/db/: __init__.py  setup_database.py
demo/ui/chainlit_ui/src/lgos_chainlit/db/migrations/: 0001_chainlit_data_layer.sql  0002_thread_tags.sql
demo/ui/chainlit_ui/src/lgos_chainlit/migrations/: 0003_chainlit_2_1_0_command.sql  0005_chainlit_2_9_4_modes.sql
demo/ui/chainlit_ui/src/lgos_chainlit/public/elements/: ClientEventTimeline.jsx
demo/ui/chainlit_ui/src/lgos_chainlit/utils/: __init__.py  chat.py  chat_settings.py  client_events.py  clients.py
demo/ui/chainlit_ui/tests/: conftest.py  test_chainlit_auth.py  test_chainlit_client_chat_settings.py  test_chainlit_client_events.py  test_chainlit_client_settings.py  test_chainlit_history.py  test_chainlit_hitl.py  test_chainlit_simple_chat_settings.py  test_chainlit_simple_settings.py  test_env_settings.py  test_settings.py
demo/ui/openwebui/: .env.example  README.md  hitl_function.py  openwebui_pipe.py  pyproject.toml  simple_graph_pipe.py  sync_functions.py
demo/ui/openwebui/functions/: __init__.py  generic.py  uservalves_simple.py
demo/ui/openwebui/src/lgos_openwebui/: sync_functions.py
demo/ui/openwebui/src/lgos_openwebui/functions/: generic.py  uservalves_simple.py
demo/ui/openwebui/tests/: conftest.py  test_openwebui_generic.py  test_openwebui_sync_functions.py  test_openwebui_uservalves_simple.py
docker/: Dockerfile
docker/bifrost/: config.json
docs/: getting-started.md  index.md  reference.md
docs/demo/: api.md  bifrost.md  chainlit.md  docker.md  graphs.md  index.md  open-webui.md  reference.md
docs/explanation/: architecture.md  index.md  langgraph-integration.md  openai-compatibility.md
docs/how-to-guides/: authentication.md  docker.md  index.md  langgraph-runtime-settings.md  openai-proxies.md  openai-proxy.md
docs/integrations/: chainlit.md  index.md  open-webui.md  openai-proxies.md
docs/tutorials/: custom-graphs.md  getting-started.md  index.md  openai-clients.md
explanation/: index.html
explanation/architecture/: index.html
explanation/langgraph-integration/: index.html
explanation/openai-compatibility/: index.html
how-to-guides/: index.html
how-to-guides/authentication/: index.html
how-to-guides/docker/: index.html
includes/: abbreviations.md
notebooks/: custom_api.ipynb
reference/: index.html
scripts/: check_bifrost_lgos_models.py
search/: search_index.json
src/langgraph_openai_serve/: __init__.py  app.py  graph_serve.py  openai_server.py
tests/: README.md  conftest.py  test_openai_client.py  test_placeholder.py  test_version.py
tests/api/: hitl_helpers.py  test_chat_cancellation.py  test_chat_citations.py  test_chat_client_events.py  test_chat_completions.py  test_chat_interrupts.py  test_demo_checkpointer.py  test_demo_settings.py  test_errors.py  test_health.py  test_hitl.py  test_interrupt_helpers.py  test_models.py  test_openai_server.py
tests/graph/: conftest.py  test_citations_demo.py  test_client_config.py  test_client_settings.py  test_complex_subgraphs_demo.py  test_interrupt_showcase.py  test_lgos_rag_demo.py  test_runner.py  test_runner_adapters.py  test_runner_invoke.py  test_runner_stream.py
tests/integration/: test_demo_distribution_boundary.py  test_demo_protocol_contract.py
tests/ui/: test_chainlit_citations.py  test_chainlit_hitl.py  test_openwebui_function.py  test_openwebui_pipe.py
tests/ui_events/: test_chat_completion_events.py  test_codec.py
tutorials/: index.html
{{cookiecutter.project_name}}/: .pre-commit-config.yaml
(+80 files in other folders)
