[project]
name = "langgraph_openai_serve"
version = "0.0.1"
description = "Openai Compatible Langgraph Server"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "İlker SIĞIRCI", email = "sigirci.ilker@gmail.com"},
]
maintainers = [
    {name = "İlker SIĞIRCI", email = "sigirci.ilker@gmail.com"},
]

keywords = [
    "langgraph_openai_serve"
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "anyio>=4,<5",
    "fastapi[standard]>=0.121.0",
    "langgraph>=1.1.10,<2.0.0",
    "openai>=2.0.0,<3.0.0",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.9.0",
]

[project.optional-dependencies]
tracing = [
    "langfuse>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "prek>=0.3.11",
    "ruff>=0.15.12",
    "ty>=0.0.55",
]
doc = [
    "zensical>=0.0.11",
    "mkdocstrings-python>=2.0.0",
]
test = [
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "pytest-env>=1.6.0",
]
[tool.uv]
default-groups = ["dev", "doc", "test"]

[tool.pytest.ini_options]
minversion = "8.3.3"
addopts = [
    "--import-mode=importlib",
    "--color=yes",
    "--strict-config",
    "--strict-markers",
]

env = ["ENVIRONMENT=test", "LGOS_ENABLE_LANGFUSE=False"]

testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]
respect-gitignore = true

extend-exclude = [
    "docs",
]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]

select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C9",  # mccabe

    "E",  # pycodestyle errors (default)
    "F",  # pyflakes (default)
    "I",  # isort
    "PD", # pandas-vet
    "PIE", # pie
    "PL",  # pylint
    "PTH", # pathlib
    "Q",  # flake8-quotes
    "RET", # return
    "RUF", # Enable all ruff-specific checks
    "SIM", # simplify
    "S307", # eval
    # "T20",  # (disallow print statements) keep debugging statements out of the codebase
    "W",  # pycodestyle warnings
    "ASYNC" # async
]

ignore = [
    "E501",  # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
]

unfixable = [
    "F401" # Unused imports.
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.coverage.run]
source = ['src/langgraph_openai_serve']
branch = true
context = '${CONTEXT}'

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'if TYPE_CHECKING:',
    '@overload',
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<0.20"]
