[project]
name = "lgos-openwebui"
version = "0.1.0"
description = "Open WebUI Functions and synchronization command for LGOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
    "httpx>=0.28.0",
    "openai>=2.0.0,<3.0.0",
    "pydantic>=2.11,<3",
]

[project.scripts]
lgos-openwebui-sync = "lgos_openwebui.sync_functions:main"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
test = [
    "anyio>=4,<5",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.pytest.ini_options]
minversion = "8.3.3"
addopts = [
    "--import-mode=importlib",
    "--color=yes",
    "--strict-config",
    "--strict-markers",
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "PIE", "PTH", "RUF", "SIM", "W"]
ignore = ["E501"]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11,<0.12"]
